Fix variable names
This will fix variable names.

Signed-off-by: Seojeonguk <junguk7880@naver.com>